Fix circle position on mobile devices

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Mastodon Bird UI by @rolle@mementomori.social
-   1.4.4rc1 */
+   1.4.4rc2 */
 
 /* CSS variables */
 :root {
@@ -3456,19 +3456,27 @@ body.embed .entry .detailed-status {
   top: calc(50% + -1px) !important;
 }
 
-/* Fix the sparkle position on small screens */
-@media (max-width: 888px) {
-  .layout-single-column .status__action-bar button.icon-button.icon-button--with-counter.star-icon.activate.star-icon::after {
-    /* stylelint-disable-next-line */
-    left: calc(50% - 13px) !important;
-  }
-}
-
 /* Circle offset on numbered item */
 .layout-single-column .detailed-status__action-bar button.icon-button.icon-button--with-counter.activate.star-icon::before,
 .layout-single-column .status__action-bar button.icon-button.icon-button--with-counter.activate.star-icon::before {
   /* stylelint-disable-next-line */
   left: calc(50% - 14px) !important;
+}
+
+/* Fix the sparkle and circle position on small screens on the Explore */
+@media (max-width: 888px) {
+  /* Sparkle offset on numbered item */
+  .layout-single-column .status__action-bar button.icon-button.icon-button--with-counter.star-icon.activate.star-icon::after {
+    /* stylelint-disable-next-line */
+    left: calc(50% - 13px) !important;
+  }
+
+  /* Circle offset on numbered item */
+  .layout-single-column .detailed-status__action-bar button.icon-button.icon-button--with-counter.activate.star-icon::before,
+  .layout-single-column .status__action-bar button.icon-button.icon-button--with-counter.activate.star-icon::before {
+    /* stylelint-disable-next-line */
+    left: calc(50% - 13px) !important;
+  }
 }
 
 @keyframes popping {
